<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/action_settings">

        <ListPreference
            android:title="@string/pref_imageQuality"
            android:icon="@drawable/file_image"
            android:summary="@string/pref_imageQuality_summary"
            android:key="imageQuality"
            android:defaultValue="80"
            android:entries="@array/listArrayImage"
            android:entryValues="@array/listValuesImage" />

        <CheckBoxPreference
            android:title="@string/pref_backup"
            android:icon="@drawable/backup_restore"
            android:summary="@string/pref_backup_summary"
            android:key="backup"
            android:defaultValue="true" />

        <Preference
            android:title="@string/pref_folder"
            android:icon="@drawable/folder"
            android:summary="@string/pref_folder_summary"
            android:key="folder" />

        <Preference
            android:title="@string/action_openSettings"
            android:icon="@drawable/settings"
            android:summary="@string/action_openSettings_summary"
            android:key="settings" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_prefApp">

        <Preference
            android:title="@string/about_settings"
            android:icon="@drawable/information_outline"
            android:summary="@string/about_settings_text"
            android:key="license" />

    </PreferenceCategory>

</PreferenceScreen>